select from back-end

--- a/eclipse/CottonMill/src/main/webapp/index.html
+++ b/eclipse/CottonMill/src/main/webapp/index.html
@@ -9,5 +9,33 @@
 <form action="26_jan">
 <input type="submit" value="click here...">
 </form>
+<h1>running server</h1>
+<form action="20_jan">
+<input type="submit" value="click here...">
+</form>
+<h1>running server</h1>
+<form action="21_jan">
+<input type="submit" value="click here...">
+</form>
+<h1>running server</h1>
+<form action="22_jan">
+<input type="submit" value="click here...">
+</form>
+<h1>running server</h1>
+<form action="25_jan">
+<input type="submit" value="click here...">
+</form>
+<h1>running server</h1>
+<form action="28_jan">
+<input type="submit" value="click here...">
+</form>
+<h1>running server</h1>
+<form action="29_jan">
+<input type="submit" value="click here...">
+</form>
+<h1>running server</h1>
+<form action="30_jan">
+<input type="submit" value="click here...">
+</form>
 </body>
 </html>
